# sharepaste

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.server-allinone  README.md  compose.server-allinone.yml  design-system.css  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  release-client.yml
apps/: README.md
apps/client-cli/: package.json
apps/desktop-linux/: README.md
apps/desktop-macos/: Package.swift  README.md
apps/desktop-windows/: README.md
apps/desktop-windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-windows/src-tauri/src/: main.rs
apps/mobile-android/: README.md  build.gradle.kts  settings.gradle.kts
apps/server/: package.json
client/: package.json  tsconfig.json  vitest.config.ts
client/src/: cli.ts  index.ts  types.ts
client/test/: bootstrap.test.ts  core.test.ts  crypto.test.ts
crates/client-runtime/: Cargo.toml  README.md
crates/client-runtime/src/: crypto.rs  history.rs  lib.rs  policy.rs  sync.rs  types.rs
crates/client-runtime/tests/: crypto.rs  runtime.rs
deploy/container/: start-server-allinone.sh
deploy/server/: sharepaste-server.env.example  sharepaste-server.service
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: CURRENT-SOLUTION-DESIGN-REPORT-2026-03-09.md
macos/: README.md
proto/: sharepaste.proto
scripts/: build-server-allinone-image.sh  build-windows-web-icons.py  export-server-allinone-image.sh  load-and-run-server-allinone.sh  prepare-node-base-image.sh  run-server-allinone-container.sh  start-android-vm.sh  start-macos-client.sh  start-server-prod.sh  start-server.sh  start-windows-client.cmd  start-windows-client.ps1
server/: package.json  tsconfig.json
(+100 files in other folders)
