[workspace]
members = ["crates/client-runtime"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hex = "0.4.3"
rand = "0.9.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
