[package]
name = "sharepaste-client-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "sharepaste-client-runtime-bridge"
path = "src/bin/bridge.rs"

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
