[package]
name = "sharepaste-desktop"
version = "0.1.0"
edition = "2021"
default-run = "sharepaste-desktop"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.1", features = [] }
