[package]
name = "sharepaste-desktop-windows"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
png = "0.17.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tauri = { version = "1.8.3", features = ["api-all", "system-tray"] }
